# python_c_cpp

./: .gitignore  CMakeLists.txt  README.MD
cDemo/: cDemo.MD  mymath.c  setup.py
cppDemo/: cppDemo.MD  greet.cpp  greet_wrapper.cpp  makefile  setup.py
